--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "http://git.2b6.me/guide/markdown",
   "main": "index.js",
   "dependencies": {
-    "kd-utils": "git+ssh://git@git.2b6.me:taining.lu/kdutils.git",
+    "kd-utils": "git+ssh://git@github.com:qiaoyixuan/utils.git",
     "lodash": "^4.6.1",
     "markdown-it": "^6.0.0",
     "markdown-it-container": "^2.0.0",
